Add JVM args table. Streamline Installation Overview sections.